--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@4.1.0
+  aws-cli: circleci/aws-cli@1.3.1
   # different jobs are calles later in the workflows sections
 jobs:
   build:
@@ -11,7 +12,7 @@ jobs:
     steps:
       - node/install
       - checkout
-      # install dependencies in both apps
+      - aws-cli/setup
       - run:
           name: Front-End Install
           command: |
@@ -28,4 +29,8 @@ jobs:
           name: Back-End Build
           command: |
             npm run backend:build
+      - run:
+          name: Deploy App
+          command: |
+            npm run frontend:deploy
       
