--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
         "frontend:install": "cd reactnd-contacts-complete && npm install",
         "backend:install": "cd reactnd-contacts-server && npm install",
         "frontend:build": "cd reactnd-contacts-server && npm install",
-        "backend:build": "cd reactnd-contacts-server && npm install"
+        "backend:build": "cd reactnd-contacts-server && npm install",
+        "frontend:deploy":"cd reactnd-contacts-complete && npm run deploy" 
 
 
 
